--- a/package.json
+++ b/package.json
@@ -15,5 +15,10 @@
   "bugs": {
     "url": "https://github.com/Tommy-Lim/gulp-demo/issues"
   },
-  "homepage": "https://github.com/Tommy-Lim/gulp-demo#readme"
+  "homepage": "https://github.com/Tommy-Lim/gulp-demo#readme",
+  "devDependencies": {
+    "gulp": "^3.9.1",
+    "gulp-imagemin": "^3.2.0",
+    "gulp-newer": "^1.3.0"
+  }
 }
