--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "homepage": "https://github.com/Tommy-Lim/gulp-demo#readme",
   "devDependencies": {
     "gulp": "^3.9.1",
+    "gulp-htmlclean": "^2.7.14",
     "gulp-imagemin": "^3.2.0",
     "gulp-newer": "^1.3.0"
   }
